# godot-rust-starter

godot/: boot.gd  boot.gd.uid  boot.tscn  export_presets.cfg  extension_list.cfg  gdlib.gdextension  gdlib.gdextension.uid  icon.svg.import  match_joining.gd  match_joining.gd.uid  project.godot
godot/addons/godot-rollback-netcode/: DebugStateComparer.gd.uid  DummyNetworkAdaptor.gd.uid  HashSerializer.gd.uid  Logger.gd.uid  MessageSerializer.gd.uid  NakamaWebRTCNetworkAdaptor.gd.uid  NetworkAdaptor.gd.uid  NetworkAnimationPlayer.gd.uid  NetworkRandomNumberGenerator.gd.uid  NetworkTimer.gd.uid  Plugin.gd.uid  ProjectSettings.gd.uid  RPCNetworkAdaptor.gd.uid  SoundManager.gd.uid  SpawnManager.gd.uid  SyncDebugger.gd.uid  SyncManager.gd.uid  SyncReplay.gd.uid  log2json.gd.uid
godot/addons/godot-rollback-netcode/debugger/: DebugOverlay.gd.uid  PeerStatus.gd.uid  PerfTimer.gd.uid
godot/addons/godot-rollback-netcode/log_inspector/: FrameDataGraph.gd.uid  FrameDataGraphCanvas.gd.uid  FrameDataGrid.gd.uid  FrameViewer.gd.uid  FrameViewerSettingsDialog.gd.uid  FrameViewerTimeOffsetSetting.gd.uid  LogData.gd.uid  LogInspector.gd.uid  ProgressDialog.gd.uid  ReplayServer.gd.uid  StateInputViewer.gd.uid
matchbox_socket/: Cargo.toml
matchbox_socket/src/webrtc_socket/: socket.rs  wasm.rs
matchmaking_server/: Cargo.toml
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  networking.rs  player.rs
